# retell_agent

./: .env.example  .gitignore  Makefile  README.md  SETUP.md  main.py  pyproject.toml
src/: config.py  main.py
src/models/: retell.py  slack.py
src/providers/: _attachment.py  clickup.py  discord.py  mattermost.py  retell.py  slack.py
src/routes/: alerts.py  calls.py  health.py  webhook.py
src/services/: alert_service.py  call_service.py  notifier.py
src/utils/: logger.py  openapi.py
